--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "@roots/bud-tailwindcss": "6.16.1",
     "@roots/sage": "6.16.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "preline": "^2.0.0"
+  }
 }
