--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "php": "^8.2",
     "log1x/acf-composer": "^2.1",
     "log1x/sage-directives": "^1.1",
+    "log1x/sage-svg": "^1.1",
     "wordpress-premium/advanced-custom-fields-pro": "^6.2"
   },
   "require-dev": {
