--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "devDependencies": {
     "@roots/bud": "6.16.1",
     "@roots/bud-tailwindcss": "6.16.1",
-    "@roots/sage": "6.16.1"
-  },
-  "dependencies": {
+    "@roots/sage": "6.16.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "preline": "^2.0.0"
   }
 }
