--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "translate:mo": "wp i18n make-mo ./resources/lang ./resources/lang"
   },
   "devDependencies": {
-    "@roots/bud": "6.16.1",
-    "@roots/bud-tailwindcss": "6.16.1",
-    "@roots/sage": "6.16.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@roots/bud": "6.16.1",
+    "@roots/bud-tailwindcss": "6.16.1",
+    "@roots/sage": "6.16.1",
     "preline": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
